# AFW

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Implementation Plan.md  pyproject.toml  requirements.txt
.asset-library/: config.json
.github/workflows/: ci.yml
ProjectPlans/: Asset Examples.md
config/: asset-types.json  classification.json  file-types.json  indexing.json  llm-profiles.json  processing.json  settings.json  suppliers.json
src/asset_organiser/: __init__.py  __main__.py  config_models.py  config_service.py
src/asset_organiser/classification/: __init__.py  constants.py  llm_asset_type.py  llm_filetypes.py  llm_grouping.py  llm_naming.py  llm_tagging.py  models.py  module.py  output.py  pipeline.py  rule_based.py  service.py  standalone.py
src/asset_organiser/llm/: __init__.py  client.py  ollama.py  openai.py
src/asset_organiser/ui/: __init__.py  library.py  main_window.py  settings.py  workspace.py
tests/: test_classification_pipeline.py  test_classification_service.py  test_config_service.py  test_llm_ollama_client.py  test_llm_openai_client.py  test_llm_profile_reachability.py  test_package_import.py  test_ui.py
