[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-organiser"
version = "0.1.0"
description = "Portable CG asset organiser."
requires-python = ">=3.11"
dependencies = [
  "PySide6",
  "pydantic"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
  "isort",
  "pre-commit"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
